--- a/less/main.less
+++ b/less/main.less
@@ -1,7 +1,34 @@
 #main {
 	width:100%; height:100%;
+	overflow:hidden;
 }
 
-.sample {
-	border:solid 1px red;
+
+#background {
+	position:absolute;
 }
+
+#background img {
+	position:absolute;
+	width:100%; height:100%;
+}
+
+#nav {
+	position:absolute;
+	left:20px; top:20px;
+}
+
+#section {
+	position:absolute;
+	left:20px; top:50px;
+	color:#ffffff;
+}
+
+#audioButton {
+	position:absolute;
+	right:20px; top:20px;
+	width:20px; height:20px;
+	cursor:pointer;
+}
+#audioButton.on { background:#009900; }
+#audioButton.off { background:#990000; }
